--- a/index.html
+++ b/index.html
@@ -1866,7 +1866,7 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
     		position: fixed;
     		right: 20px;
     		bottom: 20px;
-    		display: flex;
+    		display: none;
     		flex-direction: column;
     		gap: 10px;
     		z-index: 1000;
