--- a/index.html
+++ b/index.html
@@ -1894,6 +1894,10 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 		.scroll-buttons button:active {
     		transform: scale(0.95);
 		}
+		.scroll-buttons button:focus {
+    		outline: 1px solid #007AFF;
+    		outline-offset: 1px;
+		}
     </style>
 </head>
 <body onload="checkAuth()">
