--- a/index.html
+++ b/index.html
@@ -1895,8 +1895,8 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
     		transform: scale(0.95);
 		}
 		.scroll-buttons button:focus {
-    		outline: 1px solid #007AFF;
-    		outline-offset: 1px;
+    		outline: none;
+    		box-shadow: 0 0 0 2px rgba(0, 122, 255, 0.3);
 		}
     </style>
 </head>
