--- a/index.html
+++ b/index.html
@@ -1862,36 +1862,41 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			border-color: rgba(255,209,102,0.85) !important;
 			background: rgba(255,209,102,0.2) !important;
 		}
+		.scroll-buttons {
+    		position: fixed;
+    		right: 10px;
+    		bottom: 10px;
+    		display: none;
+    		flex-direction: column;
+    		gap: 10px;
+    		z-index: 1000;
+		}
+
 		.scroll-buttons button {
-    		width: 20px;
+   			width: 20px;
     		height: 20px;
     		border-radius: 50%;
-   		 	border: none;
+    		border: none;
     		background: #007bff;
     		color: white;
     		font-size: 10px;
     		cursor: pointer;
     		box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-   			transition: all 0.3s ease;
-    		outline: none !important;
+    		transition: all 0.3s ease;
 		}
 
 		.scroll-buttons button:hover {
     		background: #0056b3;
     		transform: scale(1.1);
-    		box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-    		outline: none !important;
+   			box-shadow: 0 4px 15px rgba(0,0,0,0.4);
 		}
 
 		.scroll-buttons button:active {
-    		transform: scale(0.95);
-    		outline: none !important;
+    		transform: scale(0.00);
 		}
-
-		.scroll-buttons button:focus,
-		.scroll-buttons button:focus-visible {
+		.scroll-buttons button:focus {
     		outline: none !important;
-    		box-shadow: 0 0 0 2px rgba(0, 122, 255, 0.3) !important;
+    		box-shadow: 0 0 0 2px rgba(0, 122, 255, 0.3);
 		}
     </style>
 </head>
