--- a/index.html
+++ b/index.html
@@ -5522,6 +5522,7 @@ function computeComp() {
 	// console.log('anchors:', document.querySelectorAll('#diffOutput [id^="chg-"]').length);
 
 	renderChangesListComp(changes);
+	console.log('HTML APRÈS renderChangesListComp:', document.getElementById('diffOutput').innerHTML);
 
 	insCountComp.textContent = ins;
 	delCountComp.textContent = del;
